--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~3.1.3",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "expo": "^50.0.17",
     "expo-camera": "~14.1.2",
@@ -21,6 +22,9 @@
     "react-native": "0.73.6",
     "react-native-grid-component": "^2.0.1",
     "react-native-web": "~0.19.6",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "tsconfig": "^7.0.0"
   },
   "devDependencies": {
