--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-grid-component": "^2.0.1",
+    "react-native-svg": "^15.2.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
